--- a/config/env.yaml
+++ b/config/env.yaml
@@ -1,2 +1,2 @@
-n_joints: 5
-segement_length: 1  # maybe add an option "random"??
+n_joints: 20
+segment_length: 1  # maybe add an option "random"??
