--- a/config/base_ppo.yaml
+++ b/config/base_ppo.yaml
@@ -1,3 +1,4 @@
+task: ReachGoalTask
 learning_rate: 0.0003
 gamma: 0.9
 lmbda: 0.9
@@ -7,3 +8,5 @@ rollout_len: 3
 buffer_size: 30
 minibatch_size: 32
 n_epochs: 10000
+action_covariance_mode: independent
+action_covariance_decay: 0.5
