--- a/config/base_sac.yaml
+++ b/config/base_sac.yaml
@@ -1,14 +1,16 @@
+task: ReachGoalTask # ImitationTask # 
 lr_pi: 0.0005
 lr_q: 0.001
 init_alpha: 0.01
-gamma: 0.98
+gamma: 0.98  # has to be zero for imitation learning
 batch_size: 32
 buffer_limit: 50000
 start_buffer_size: 1000
 train_iterations: 20
 tau: 0.01  # for target network soft update,
-target_entropy: -1.0 # for automated alpha update,
+target_entropy: -20.0 # for automated alpha update,
 lr_alpha: 0.001
-n_epochs: 1000
-action_covariance_mode: exp_decay
+n_epochs: 5000
+action_covariance_mode: independent
 action_covariance_decay: 0.5
+action_magnitude: 3.141  # a value inside the interval (0, pi]
