--- a/config/env.yaml
+++ b/config/env.yaml
@@ -1,2 +1,5 @@
-n_joints: 20
+n_joints: 10
 segment_length: 1  # maybe add an option "random"??
+target_epsilon: 0.1
+n_time_steps: 200
+action_mode: "one_shot"  # "strategic"  "one_shot"
