--- a/config/base_vae.yaml
+++ b/config/base_vae.yaml
@@ -1,13 +1,13 @@
-num_joints: 2
-latent_dim: 2
-device: "cpu"
-dataset: "action"  # "action" "action_target" "conditional_action_target"
-dataset_mode: "relative_tanh" # "const" "random" "relative_uniform" "relative_tanh" # const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible 
-batch_size: 256
+num_joints: 5
+latent_dim: 5
+dataset: "conditional_action_target"  # "action" "action_target" "conditional_action_target"
+dataset_mode: "IK_random_start" # "IK_const_start" "IK_random_start" "noise_uniform" "noise_tanh" # const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible 
+conditional_info: "state"  # "state" "target_position"
+batch_size: 1024
 shuffle_data: False
-epochs: 201
+epochs: 801
 val_interval: 5
 learning_rate: 0.0012
-kl_loss_weight: 0.00001
+kl_loss_weight: 0.001
 reconstruction_loss_weight: 1
 normalize: True
