--- a/config/base_sac.yaml
+++ b/config/base_sac.yaml
@@ -15,10 +15,10 @@ action_covariance_mode: independent
 action_covariance_decay: 0.5
 action_magnitude: 0.8  # a value inside the interval (0, pi]
 normal_actor:
-  enabled: True
-latent_actor: 
   enabled: False
-  device: "cuda:0"
+latent_actor: 
+  enabled: True
+  device: "cuda:2"
   latent_dim: 2
   vae_learning: False
-  checkpoint: lorem ipsum  # specify 
+  checkpoint_dir: "results/vae"  # specify 
