--- a/config/base_sac.yaml
+++ b/config/base_sac.yaml
@@ -1,4 +1,4 @@
-task: ReachGoalTask # ImitationTask # 
+task: ReachGoalTask # ImitationTask
 lr_pi: 0.0005
 lr_q: 0.001
 init_alpha: 0.01
@@ -19,6 +19,6 @@ normal_actor:
 latent_actor: 
   enabled: True
   device: "cuda:2"
-  latent_dim: 2
+  latent_dim: 5
   vae_learning: False
   checkpoint_dir: "results/vae"  # specify 
