--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,15 @@
             "program": "main_ppo.py",
             "console": "integratedTerminal",
             "justMyCode": false
+        },
+        {
+            "name": "main.py SAC",
+            "type": "python",
+            "request": "launch",
+            "program": "main.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": ["SAC", "test", "1"]
         }
     ]
 }
