implemented rescale actions

--- a/config/env.yaml
+++ b/config/env.yaml
@@ -3,3 +3,7 @@ segment_length: 1  # maybe add an option "random"??
 target_epsilon: 0.1
 n_time_steps: 200
 action_mode: "strategic"  # "strategic"  "one_shot"
+rescale_actions:
+  enabled: True
+  min: -1
+  max: 1
