--- a/config/base_vae.yaml
+++ b/config/base_vae.yaml
@@ -1,8 +1,8 @@
 num_joints: 10
-latent_dim: 4
+latent_dim: 8
 dataset: "conditional_action_target"  # "action" "action_target" "conditional_action_target"
 dataset_mode: "IK_random_start" # "IK_const_start" "IK_random_start" "noise_uniform" "noise_tanh" # const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible 
-conditional_info: "state"  # "state" "target_position"
+conditional_info: "state"  # "state" "targets"
 batch_size: 1024
 shuffle_data: False
 epochs: 801
