--- a/config/base_vae.yaml
+++ b/config/base_vae.yaml
@@ -1,13 +1,14 @@
-num_joints: 10
-latent_dim: 8
+num_joints: 2
+latent_dim: 2
 dataset: "conditional_action_target"  # "action" "action_target" "conditional_action_target"
 dataset_mode: "IK_random_start" # "IK_const_start" "IK_random_start" "noise_uniform" "noise_tanh" # const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible 
 conditional_info: "state"  # "state" "targets"
+loss_func: "VAELoss"  # "VAELoss" "CyclicVAELoss" "DistVAELoss"
 batch_size: 1024
 shuffle_data: False
 epochs: 801
 val_interval: 5
 learning_rate: 0.0012
 kl_loss_weight: 1
-reconstruction_loss_weight: 1
+reconstruction_loss_weight: 0
 normalize: True
