--- a/config/base_supervised.yaml
+++ b/config/base_supervised.yaml
@@ -1,7 +1,8 @@
 num_joints: 2
-n_epochs: 201
+n_epochs: 801
 batch_size: 2048
 val_interval: 5
 feature_source: "state"  # choices: "state" "targets"
 learning_rate: 0.0015
-action_radius: 0.5
+action_radius: 0
+loss_func: "MergeLoss"  # ImiationLoss DistanceLoss MergeLoss
