--- a/config/base_supervised.yaml
+++ b/config/base_supervised.yaml
@@ -1,11 +1,11 @@
-num_joints: 2
-n_epochs: 801
-batch_size: 2048
+num_joints: 5
+n_epochs: 1001
+batch_size: 5000
 val_interval: 5
-feature_source: "noisy_targets"  # choices: "state" "targets" "noisy_targets"
+feature_source: "gaussian_target"  # choices: "state" "targets" "gaussian_target"
 learning_rate: 0.0015
 action_radius: 0.5
-loss_func: "PointDistanceLoss"  # ImitationLoss DistanceLoss MergeLoss PointDistanceLoss
+loss_func: "IKLoss"  # ImitationLoss DistanceLoss MergeLoss PointDistanceLoss
 post_processor:
   enabled: True
   min_action: -1 # -3.142  # little offset to make it easier for tanh function
