--- a/config/base_vae.yaml
+++ b/config/base_vae.yaml
@@ -1,6 +1,6 @@
 num_joints: 2
 latent_dim: 2
-dataset: "conditional_target"  # "action" "action_target" "conditional_action_target" "conditional_target"
+dataset: "target_gaussian"  # "action" "action_target" "conditional_action_target" "conditional_target"
 dataset_mode: "IK_random_start" # "IK_const_start" "IK_random_start" "IK_random_start_constrained" "noise_uniform" "noise_tanh"  const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible 
 action_constrain_radius: 0.5  # only available if dataset == conditional_action_target and conditional_target(here it will be used as std around the current position)
 conditional_info: "state"  # "state" "targets"
@@ -9,7 +9,7 @@ loss_func:  # only IK Loss is available
   reconstruction_loss_weight: 1
   distance_loss_weight: 1
   imitation_loss_weight: 0
-batch_size: 1024
+batch_size: 2096
 shuffle_data: False
 epochs: 801
 val_interval: 5
