--- a/config/base_supervised.yaml
+++ b/config/base_supervised.yaml
@@ -1,12 +1,22 @@
-num_joints: 5
-n_epochs: 1001
+num_joints: 2
+n_epochs: 3001
 batch_size: 5000
 val_interval: 5
 feature_source: "gaussian_target"  # choices: "state" "targets" "gaussian_target"
 learning_rate: 0.0015
-action_radius: 0.5
-loss_func: "IKLoss"  # ImitationLoss DistanceLoss MergeLoss PointDistanceLoss
-post_processor:
+action_radius: 0.2
+loss_func: 
+  type: "IKLoss"  # ImitationLoss DistanceLoss MergeLoss PointDistanceLoss
+  imitation_loss_weight: 1
+  distance_loss_weight: 1
+  
+post_processor_config:
   enabled: True
   min_action: -1 # -3.142  # little offset to make it easier for tanh function
   max_action: 1 # 3.142  # little offset to make it easier for tanh function
+normal_learn:
+  enabled: False
+active_learn:
+  enabled: True
+  mixing_coef: 0.95
+  num_deviation_steps: 1
