--- a/config/base_supervised.yaml
+++ b/config/base_supervised.yaml
@@ -1,7 +1,6 @@
 n_joints: 2
 n_epochs: 3001
 val_interval: 5
-learning_rate: 0.0015
 dataset:
   type: VAETargetGaussian  # Name of dataset type 
   mode: "IK_random_start" # "IK_const_start" "IK_random_start" "IK_random_start_constrained" "noise_uniform" "noise_tanh"  const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible
@@ -14,7 +13,11 @@ loss_func:
   type: "IKLoss"  # ImitationLoss DistanceLoss MergeLoss PointDistanceLoss
   imitation_loss_weight: 1
   distance_loss_weight: 1
-post_processor_config:
+post_processor:
   enabled: True
   min_action: -1 # -3.142  # little offset to make it easier for tanh function
   max_action: 1 # 3.142  # little offset to make it easier for tanh function
+model:
+  architecture: [256, 256]
+  activation_function: ReLU
+  learning_rate: 0.0015
