--- a/config/env.yaml
+++ b/config/env.yaml
@@ -8,7 +8,7 @@ rescale_actions:
   min: -1
   max: 1
 task: 
-  type: "ReachGoalTask" # "ImitationTask""
+  type: "ReachGoalTask" # "ImitationTask"
   epsilon: 0.1
   bonus: 0
   normalize: true
