adapted config files

--- a/config/base_vae.yaml
+++ b/config/base_vae.yaml
@@ -3,7 +3,7 @@ n_epochs: 5001
 learning_rate: 0.003
 val_interval: 5
 model:
-  latent_dim: 2
+  latent_dim: 4
   encoder:
     architecture: [128, 128]
     activation_function: "ReLU"
@@ -14,7 +14,7 @@ loss_func:  # only IK Loss is available
   kl_loss_weight: 0.001
   reconstruction_loss_weight: 1
   distance_loss_weight: 1
-  imitation_loss_weight: 0
+  imitation_loss_weight: 0.01
 dataset:
   type: VAETargetGaussianDataset  # Name of dataset type 
   mode: "IK_random_start" # "IK_const_start" "IK_random_start" "IK_random_start_constrained" "noise_uniform" "noise_tanh"  const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible
@@ -22,7 +22,7 @@ dataset:
   shuffle: False
   action_constrain_radius: 0.2  # only available if dataset == conditional_action_target and conditional_target(here it will be used as std around the current position)
   std: 0.2
-  target_mode: "POSITION"  # either POSITION or ACTION
+  target_mode: "ACTION"  # either POSITION or ACTION. POSITION is only applicable with distance loss while ACTION also enables imitation but needs to compute actions form ccd before hand
   truncation: 0  # for truncated gaussian in TargetGaussianDataset
 post_processor:
   enabled: True
