--- a/config/base_supervised.yaml
+++ b/config/base_supervised.yaml
@@ -2,16 +2,17 @@ n_joints: 2
 n_epochs: 3001
 val_interval: 5
 dataset:
-  type: VAETargetGaussian  # Name of dataset type 
+  type: SupervisedTargetGaussianDataset  # Name of dataset type 
   mode: "IK_random_start" # "IK_const_start" "IK_random_start" "IK_random_start_constrained" "noise_uniform" "noise_tanh"  const is a dataset created with a constant start position -> one action for one target position, with random -> multiple actions for one target positions are possible
   batch_size: 2096
   shuffle: False
   action_constrain_radius: 0.2  # only available if dataset == conditional_action_target and conditional_target(here it will be used as std around the current position)
   std: 0.2
-  target_mode: "POSITION"  # either POSITION or ACTION
+  target_mode: "ACTION"  # either POSITION or ACTION. POSITION is only applicable with distance loss while ACTION also enables imitation but needs to compute actions form ccd before hand  
+  truncation: 0  # for truncated gaussian in TargetGaussianDataset
 loss_func: 
   type: "IKLoss"  # ImitationLoss DistanceLoss MergeLoss PointDistanceLoss
-  imitation_loss_weight: 1
+  imitation_loss_weight: 0.01
   distance_loss_weight: 1
 post_processor:
   enabled: True
