--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ progress = "^1.6"
 tensorboard = "^2.16.2"
 gym = "^0.26.2"
 matplotlib = "^3.8.3"
+psutil = "^5.9.8"
+pyaml = "^23.12.0"
+seaborn = "^0.13.2"
 
 
 [build-system]
