--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,25 @@
-[tool.poetry]
-name = "bachelorthesis"
+[project]
+name = "easrl-lm-2d-ikb"
 version = "0.1.0"
 description = ""
-authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
+authors = [
+    {name = "Robin Uhrich",email = "robin.uhrich@gmail.com"}
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.11"
-torch = "^2.2.1"
-numpy = "^1.26.4"
-pandas = "^2.2.1"
-progress = "^1.6"
-tensorboard = "^2.16.2"
-gym = "^0.26.2"
-matplotlib = "^3.8.3"
-psutil = "^5.9.8"
-pyaml = "^23.12.0"
-seaborn = "^0.13.2"
+requires-python = ">=3.12,<4.0.0"
+dependencies = [
+    "torch (>=2.6.0,<3.0.0)",
+    "gymnasium (>=1.1.1,<2.0.0)",
+    "numpy (>=2.2.3,<3.0.0)",
+    "contourpy (>=1.3.1,<2.0.0)",
+    "stable-baselines3 (>=2.5.0,<3.0.0)",
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "pyargwriter @ git+ssh://git@github.com/RobinU434/PyArgWriter.git",
+    "config2class @ git+ssh://git@github.com/RobinU434/Config2Class.git",
+    "tensorboard (>=2.19.0,<3.0.0)"
+]
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
