--- a/configs/train_sac.yaml
+++ b/configs/train_sac.yaml
@@ -1,3 +1,11 @@
 defaults:
+  - _self_
   - hydra: hydra
-  - training: train_sac 
+  - SAC: SAC 
+
+step_budget: 500_000
+n_envs: 12
+save_interval: 10_000
+
+n_joints: 10 
+episode_steps: 200
